<resources>
    <string name="app_name">Gomoku</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="button_new_game">Start New Game</string>
    <string name="button_join_game">Join A Game</string>
    <string name="button_quit">Quit</string>
    <string name="button_undo">Undo</string>
    <string name="button_close">Close</string>
</resources>
